add subtype in folder icons

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ src/main/resources/icons/duo
 src/main/resources/icons/outline
 src/main/resources/icons/filled
 src/main/resources/icons/logo
+src/main/resources/icons/reverse
